tests/snapshots/schema_cli__schema_doctor.snap
---
source: tests/schema_cli.rs
expression: pretty
---
{
  "input": {
    "additionalProperties": false,
    "properties": {
      "notify_test": {
        "description": "First show a test notification the way a nag does, to check that nag reminders reach you on this machine",
        "type": "boolean",
        "x-cli": "--notify-test"
      }
    },
    "required": [],
    "type": "object"
  },
  "output": {
    "properties": {
      "contexts": {
        "description": "Contexts (rung 9d); null when the daemon didn't report",
        "properties": {
          "active": {
            "description": "The active context's name",
            "type": [
              "string",
              "null"
            ]
          },
          "defined": {
            "description": "How many config.toml defines",
            "type": "integer"
          },
          "problems": {
            "description": "Each also in `problems`, prefixed `contexts:`",
            "items": {
              "type": "string"
            },
            "type": "array"
          }
        },
        "type": [
          "object",
          "null"
        ]
      },
      "daemon": {
        "properties": {
          "instance": {
            "type": "string"
          },
          "pid": {
            "type": [
              "integer",
              "null"
            ]
          },
          "problem": {
            "type": "string"
          },
          "protocol_version": {
            "type": [
              "integer",
              "null"
            ]
          },
          "ready": {
            "type": "boolean"
          },
          "running": {
            "type": "boolean"
          },
          "signed_in": {
            "type": [
              "boolean",
              "null"
            ]
          },
          "socket": {
            "type": "string"
          },
          "started_at": {
            "type": [
              "string",
              "null"
            ]
          },
          "version": {
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "running",
          "ready",
          "instance",
          "socket"
        ],
        "type": "object"
      },
      "database": {
        "properties": {
          "bytes": {
            "type": "integer"
          },
          "path": {
            "type": "string"
          }
        },
        "type": [
          "object",
          "null"
        ]
      },
      "last_error": {
        "description": "The most recent failure of any scope",
        "oneOf": [
          {
            "properties": {
              "at": {
                "type": [
                  "string",
                  "null"
                ]
              },
              "kind": {
                "type": "string"
              },
              "message": {
                "type": "string"
              },
              "scope": {
                "type": "string"
              }
            },
            "required": [
              "kind",
              "message"
            ],
            "type": "object"
          },
          {
            "type": "null"
          }
        ]
      },
      "my_day": {
        "description": "My Day (rung 7); null when the daemon didn't report",
        "properties": {
          "count": {
            "description": "Open tasks in it",
            "type": "integer"
          },
          "date": {
            "description": "My Day's day now",
            "format": "date",
            "type": "string"
          },
          "last_rollover": {
            "description": "The day the last rollover ran for",
            "type": [
              "string",
              "null"
            ]
          },
          "phone": {
            "description": "What the phone's own My Day depends on",
            "type": "string"
          },
          "rollover_time": {
            "description": "HH:MM, local: when a day's My Day ends",
            "type": "string"
          }
        },
        "type": [
          "object",
          "null"
        ]
      },
      "nag": {
        "description": "Nag reminders (rung 9b); null when the daemon didn't report",
        "properties": {
          "active": {
            "description": "[nag] enabled, and this system can notify",
            "type": "boolean"
          },
          "count": {
            "description": "Open tasks set to nag",
            "type": "integer"
          },
          "notifier": {
            "description": "How notifications are shown (osascript), or null where they can't be",
            "type": [
              "string",
              "null"
            ]
          },
          "problem": {
            "description": "Why nagging is off or failing",
            "type": [
              "string",
              "null"
            ]
          },
          "quiet_hours": {
            "description": "HH:MM-HH:MM, local, when nothing is shown; null for none",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "type": [
          "object",
          "null"
        ]
      },
      "outbox": {
        "description": "How many writes are in each state; flagged are unknown for over [outbox] unknown_lookup_hours (24 by default), or can't be attributed",
        "properties": {
          "done": {
            "type": "integer"
          },
          "failed": {
            "type": "integer"
          },
          "flagged": {
            "type": "integer"
          },
          "inflight": {
            "type": "integer"
          },
          "pending": {
            "type": "integer"
          },
          "unknown": {
            "type": "integer"
          }
        },
        "type": [
          "object",
          "null"
        ]
      },
      "outbox_upkeep": {
        "description": "The outbox's size and [outbox] settings (D-065); null when the daemon didn't report",
        "properties": {
          "last_pruned": {
            "description": "How many operations that prune removed",
            "type": [
              "integer",
              "null"
            ]
          },
          "last_pruned_at": {
            "description": "Unix seconds: when finished writes were last pruned, since the daemon started",
            "type": [
              "integer",
              "null"
            ]
          },
          "problem": {
            "description": "Why an [outbox] setting wasn't used",
            "type": [
              "string",
              "null"
            ]
          },
          "retention_days": {
            "description": "Finished writes are kept, and undoable, this long",
            "type": "integer"
          },
          "rows": {
            "description": "Operations stored, in every state",
            "type": "integer"
          },
          "unknown_lookup_hours": {
            "description": "How long an unknown write is looked for before it's flagged",
            "type": "integer"
          }
        },
        "type": [
          "object",
          "null"
        ]
      },
      "problems": {
        "items": {
          "type": "string"
        },
        "type": "array"
      },
      "schema_version": {
        "const": 2
      },
      "scopes": {
        "items": {
          "properties": {
            "generation": {
              "type": "integer"
            },
            "in_progress": {
              "type": "boolean"
            },
            "last_changed_count": {
              "type": "integer"
            },
            "last_delta_at": {
              "description": "When a delta round of this scope last finished",
              "type": [
                "string",
                "null"
              ]
            },
            "last_error": {
              "oneOf": [
                {
                  "properties": {
                    "at": {
                      "type": [
                        "string",
                        "null"
                      ]
                    },
                    "kind": {
                      "type": "string"
                    },
                    "message": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "kind",
                    "message"
                  ],
                  "type": "object"
                },
                {
                  "type": "null"
                }
              ]
            },
            "last_success_at": {
              "type": [
                "string",
                "null"
              ]
            },
            "list_id": {
              "type": [
                "string",
                "null"
              ]
            },
            "list_name": {
              "type": [
                "string",
                "null"
              ]
            },
            "mode": {
              "description": "delta once a pass saved a delta link: the next pass asks Graph only for changes. enumeration until then, or after Graph rejected the link: the next pass reads the whole scope. unknown: a newer daemon's mode this ms-todo doesn't know",
              "enum": [
                "enumeration",
                "delta",
                "unknown"
              ]
            },
            "scope": {
              "description": "lists, or tasks:<list graph_id>",
              "type": "string"
            },
            "state": {
              "enum": [
                "initial",
                "ready"
              ]
            }
          },
          "required": [
            "scope",
            "state",
            "generation",
            "in_progress",
            "mode"
          ],
          "type": "object"
        },
        "type": "array"
      },
      "semantic": {
        "description": "Semantic search (rung 9c); null when the daemon didn't report",
        "properties": {
          "download_bytes": {
            "description": "The size of the one-time download",
            "type": "integer"
          },
          "enabled": {
            "description": "[search] semantic in config.toml",
            "type": "boolean"
          },
          "indexed": {
            "description": "Live tasks embedded for their current text",
            "type": "integer"
          },
          "model": {
            "description": "The embedding model, name@revision",
            "type": "string"
          },
          "model_dir": {
            "description": "Where the model's files are kept",
            "type": "string"
          },
          "pending": {
            "description": "Live tasks not embedded yet",
            "type": "integer"
          },
          "problem": {
            "description": "Why it's off or failing",
            "type": [
              "string",
              "null"
            ]
          },
          "state": {
            "description": "off: nothing downloaded. loading: downloading or reading the model. ready: tasks are embedded as they change. failed: see problem; the next search tries again",
            "enum": [
              "off",
              "loading",
              "ready",
              "failed",
              "unknown"
            ]
          }
        },
        "type": [
          "object",
          "null"
        ]
      },
      "service": {
        "description": "Whether the daemon starts at login (`daemon install`); null where that isn't built",
        "properties": {
          "changed": {
            "description": "install and uninstall only: whether anything changed",
            "type": "boolean"
          },
          "installed": {
            "type": "boolean"
          },
          "manager": {
            "description": "launchd (macOS) or systemd (Linux)",
            "type": "string"
          },
          "now": {
            "description": "install and uninstall only: how to start or stop it now rather than at the next login",
            "type": "string"
          },
          "path": {
            "description": "The file that starts it",
            "type": "string"
          }
        },
        "required": [
          "installed",
          "manager",
          "path"
        ],
        "type": [
          "object",
          "null"
        ]
      },
      "sign_in": {
        "properties": {
          "expires_at": {
            "type": [
              "string",
              "null"
            ]
          },
          "signed_in": {
            "type": "boolean"
          },
          "token_path": {
            "type": "string"
          }
        },
        "required": [
          "signed_in",
          "token_path"
        ],
        "type": "object"
      },
      "suggest": {
        "description": "List suggestions (rung 6b); null when the daemon didn't report",
        "properties": {
          "enabled": {
            "type": "boolean"
          },
          "problem": {
            "description": "Why suggestions are off or failing",
            "type": [
              "string",
              "null"
            ]
          },
          "provider": {
            "description": "typesafe",
            "type": [
              "string",
              "null"
            ]
          },
          "sends": {
            "description": "What leaves this machine when enabled",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "type": [
          "object",
          "null"
        ]
      },
      "syncing": {
        "type": [
          "boolean",
          "null"
        ]
      }
    },
    "required": [
      "schema_version",
      "sign_in",
      "daemon",
      "database",
      "scopes",
      "problems"
    ],
    "type": "object"
  }
}
